# mx-template-spider-py

./: .editorconfig  .gitignore  pyproject.toml
configs/: config.py
src/: app.py  conf.py  log.py
src/models/: base.py  urls.py
src/utils/: __init__.py  common.py  db.py  spider.py
src/website/: base.py  website.py
test/: test.py
